--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Learn Fluently</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to visit this website.</noscript>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+        <link rel="icon" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#ffffff" />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <title>Learn Fluently</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to visit this website.</noscript>
+        <div id="root"></div>
+    </body>
 </html>
